creusot/tests/should_fail/prusti/invalid_state/pre_in_type.rs
extern crate creusot_contracts;
use creusot_contracts::prusti_prelude::*;

#[ensures(true)]
fn test<'pre>(x: &'pre u32) -> u32 {
    *x
}
