creusot/tests/should_fail/prusti/invalid_state/pre_in_type.stderr
error: 'pre region must not appear in program function signature types
 --> pre_in_type.rs:5:4
  |
5 | fn test<'pre>(x: &'pre u32) -> u32 {
  |    ^^^^

error: aborting due to 1 previous error

